--- a/game.html
+++ b/game.html
@@ -862,6 +862,16 @@
         const playerName = nameInput.value.trim();
         const finalName = playerName !== '' ? playerName : '익명';
 
+        // ✅ '익명' 또는 '무명'일 경우 저장하지 않음
+        const blockedNames = ['익명', '무명'];
+        if (blockedNames.includes(finalName)) {
+          console.warn('⚠️ 이름이 익명/무명이라 기록 저장 안 함');
+          // 이름 입력 다시 가능하게 복구 (선택사항)
+          enableNameInput();
+          hasSavedThisRun = false; // 다시 입력 허용
+          return false;
+        }
+
         // ✅ 점수 기록 추가 (이 타이밍에만 addRecord 호출)
         const didUpdate = addRecord(
           finalName,
