--- a/game.html
+++ b/game.html
@@ -534,7 +534,7 @@
         gyroPromptEl.style.fontSize = '14px';
         gyroPromptEl.style.boxShadow = '0 6px 18px rgba(0,0,0,0.25)';
         gyroPromptEl.textContent =
-          '자이로(기울기) 사용을 허용하려면 터치하세요';
+          '자이로(기울기) 사용을 허용하려면 터치하세요 (시작할 때 핸드폰 각도가 움직일 때 기준)';
         gyroPromptEl.addEventListener('click', onGyroPromptClick);
         document.getElementById('game-wrap').appendChild(gyroPromptEl);
       }
